<resources>
    <string name="app_name">물먹는고래</string>

    <!-- main -->
    <string name="main_today">오늘</string>
    <string name="main_today_intake">오늘의 물 섭취량을 입력해 주세요!</string>
    <string name="ex_intake">100</string>
    <string name="ex_intake_unit">ml</string>
    <string name="main_mypage">마이페이지</string>

    <!-- main fab -->
    <string name="fab_main">main</string>
    <string name="fab_intake">intake</string>
    <string name="fab_log">log</string>
    <string name="fab_awards">awards</string>
    <string name="fab_notice">notice</string>

    <!-- mypage -->
    <string name="mypage_setting">설정</string>
    <string name="mypage_account">계정</string>
    <string name="mypage_edit_name">이름 변경</string>
    <string name="mypage_edit_password">비밀번호 변경</string>
    <string name="mypage_edit_weight">몸무게 변경</string>
    <string name="mypage_unregister">회원 탈퇴</string>
    <string name="mypage_app_info">앱정보</string>
    <string name="mypage_feedback">개발자에게 피드백 전송</string>
    <string name="mypage_policy">개인정보처리방침</string>
    <string name="mypage_logout">로그아웃</string>

    <!-- mypage edit -->
    <string name="present_password">현재 비밀번호</string>
    <string name="new_password">새로운 비밀번호</string>
    <string name="check_new_password">새로운 비밀번호 확인</string>
    <string name="present_name">현재 이름</string>
    <string name="new_name">새로운 이름</string>
    <string name="present_weight">현재 몸무게</string>
    <string name="new_weight">몸무게</string>

    <string name="edit">변경하기</string>

    <!-- login & signup -->
    <string name="login_id">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="login_signup">회원가입</string>
    <string name="signup_name">이름</string>

    <!-- button -->
    <string name="positive_btn">확인</string>
    <string name="negative_btn">취소</string>

</resources>