<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.mypage.MyPageActivity" >

    <Button
        android:id="@+id/logoutBtn"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:text="@string/mypage_logout" />


    <TextView

        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/mypage_setting"
        android:textSize="30sp"/>
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:text="@string/mypage_account"
        android:background="@drawable/underline"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/editNameBtn"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/mypage_edit_name" />

    <Button
        android:id="@+id/editPasswordBtn"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/mypage_edit_password" />

    <Button
        android:id="@+id/editWeightBtn"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/mypage_edit_weight" />

    <Button
        android:id="@+id/unregisterBtn"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/mypage_unregister" />

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:text="@string/mypage_app_info"
        android:background="@drawable/underline"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/feedbackBtn"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/mypage_feedback" />

    <Button
        android:id="@+id/policyBtn"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/mypage_policy" />
</LinearLayout>