<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.user.LoginActivity">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_login_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginLogo">

            <EditText
                android:id="@+id/loginIdEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline_shape"
                android:hint="@string/login_id"
                android:inputType="text"
                android:padding="14dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/loginPasswordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/underline_shape"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/loginFindPasswordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_find_password"
                    android:textColor="@color/login_find_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/loginSignUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_signup"
                    android:textColor="@color/login_signup"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
